# mcp-manager

./: .gitignore  README.md  package-lock.json  package.json  vite.config.js
src/: index.html  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/services/: api.js
src/styles/: main.css
templates/: defaults.json
website/: README.md  index.html  style.css
